# ANRP

./: .gitignore  API_DOC.md  README.md  pyproject.toml  requirement.txt  setup.sh
lp_recognition/Tunisian_plates/: main.py
src/: detector.py  run.py  server.py
